Looks like nowrap is evil, it's hard to prevent the browser from detecting a wider-than-screen condition and triggering the viewport zooming during the screen rotation when nowrap is around.

--- a/src/app/r-ucla/question.co.scss
+++ b/src/app/r-ucla/question.co.scss
@@ -2,14 +2,7 @@
 
 div.buttons {  // The box with the buttons.
   text-align: center;
-  margin-top: calc(20px + 1%);
-  // Prevents the buttons from bouncing down and up while their size is being decreased by the animated `margin-right`.
-  white-space: nowrap}
-
-div.buttons.primal {
-  // With `nowrap` and before `adjustSize` the box might be wider than the window.
-  // It is therefore important not to display the box prematurely, in order not to trigger viewport rescaling.
-  display: none}
+  margin-top: calc(20px + 1%)}
 
 button {  // The answer buttons.
   // We need the buttons to have the same size, otherwise the spacing is uneven when we rotate them.
